--- a/ContactsApp/Info.plist
+++ b/ContactsApp/Info.plist
@@ -45,5 +45,9 @@
     <dict>
         <key>NSAllowsArbitraryLoads</key><true/>
     </dict>
+    <key>NSCameraUsageDescription</key>
+    <string>$(PRODUCT_NAME) would like to use your camera</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>$(PRODUCT_NAME) would like to use your photo library</string>
 </dict>
 </plist>
